namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-find-moj-data-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "data-platform-find-moj-data-test"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "data-catalogue"
    cloud-platform.justice.gov.uk/application: "Find Moj Data"
    cloud-platform.justice.gov.uk/owner: "Data catalogue team: dataplatformlabs@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/find-moj-data"
    cloud-platform.justice.gov.uk/team-name: "data-catalogue"
    cloud-platform.justice.gov.uk/review-after: ""
